--- a/package.json
+++ b/package.json
@@ -11,8 +11,10 @@
     "axios": "^0.19.2",
     "core-js": "^3.6.4",
     "element-ui": "^2.13.0",
+    "file-saver": "^2.0.2",
     "vue": "^2.6.11",
-    "vue-resource": "^1.5.1"
+    "vue-resource": "^1.5.1",
+    "xlsx": "^0.15.6"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "~4.2.0",
@@ -22,6 +24,7 @@
     "eslint": "^6.7.2",
     "eslint-plugin-vue": "^6.1.2",
     "mockjs": "^1.1.0",
+    "script-loader": "^0.7.2",
     "vue-router": "^3.1.6",
     "vue-template-compiler": "^2.6.11"
   },
